# git-issue-reporter

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: example.md
examples/: example_1.py  example_2.py  example_3.py  example_decorator.py  example_github.py  example_gitlab.py  example_template.py
git_issue_reporter/: config.py  core.py  decorators.py
github_issue_reporter/: config.py  core.py  decorators.py
